--- a/vuejs/index.html
+++ b/vuejs/index.html
@@ -4,146 +4,20 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-        <!-- FontAwesome -->
+        <!-- FontAwesome kit-->
         <script src="https://kit.fontawesome.com/00b47e8c94.js" crossorigin="anonymous"></script>
-
         <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
-
-        <link rel="icon" href="/favicon.ico" />
+        <!-- Link Icon -->
+        <link rel="icon" href="https://img.icons8.com/external-febrian-hidayat-flat-febrian-hidayat/64/null/external-cashier-restaurant-febrian-hidayat-flat-febrian-hidayat.png" />
         <title>Dashboard - Point of Sale</title>
     </head>
     <body>
-        <!-- Navbar -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-info p-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#"><i class="fa-solid fa-cash-register pe-2"></i> Point of Sale</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item ps-4">
-                            <a class="nav-link" href="#">Report Sale <i class="fa-regular fa-flag"></i></a>
-                        </li>
-                    </ul>
-
-                    <button type="button" class="btn btn-danger">Logout <i class="fa-solid fa-arrow-right-from-bracket ps-2"></i></button>
-                </div>
-            </div>
-        </nav>
-
-        <div class="container-fluid text-center p-4">
-            <div class="row">
-                <!-- Kiri -->
-                <div class="col-3 border-end border-1 border-danger" style="padding-right: 0">
-                    <div class="border-bottom border-2 border-danger" style="height: 6rem">Jacob's Breakfast</div>
-                    <div class="border-bottom border-2 border-danger overflow-scroll" style="height: 24rem">Invoice Body</div>
-                    <div class="" style="height: 6rem">Commands</div>
-                </div>
-
-                <!-- Kanan -->
-                <div class="col-9 border-start border-1 border-danger">
-                    <!-- Content -->
-                    <div class="row" style="height: 478px">
-                        <!-- Category Tab -->
-                        <nav>
-                            <div class="nav nav-tabs" id="nav-tab" role="tablist">
-                                <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true">Appetizer</button>
-                                <button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact" type="button" role="tab" aria-controls="nav-contact" aria-selected="false">Main Course</button>
-                                <button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact" type="button" role="tab" aria-controls="nav-contact" aria-selected="false">Dessert</button>
-                                <button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact" type="button" role="tab" aria-controls="nav-contact" aria-selected="false">Soup</button>
-                                <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false">Drink</button>
-                                <button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact" type="button" role="tab" aria-controls="nav-contact" aria-selected="false">Others</button>
-                            </div>
-                        </nav>
-
-                        <!-- Isi category -->
-                        <div class="tab-content pt-3" id="nav-tabContent">
-                            <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab" tabindex="0">
-                                <div class="row row-cols-1 row-cols-md-3 g-4">
-                                    <div class="col">
-                                        <div class="card h-100">
-                                            <img src="..." class="card-img-top" alt="Alt-Image" />
-                                            <div class="card-body">
-                                                <h5 class="card-title">Card title</h5>
-                                                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <div class="col">
-                                        <div class="card h-100">
-                                            <img src="..." class="card-img-top" alt="Alt-Image" />
-                                            <div class="card-body">
-                                                <h5 class="card-title">Card title</h5>
-                                                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <div class="col">
-                                        <div class="card h-100">
-                                            <img src="..." class="card-img-top" alt="Alt-Image" />
-                                            <div class="card-body">
-                                                <h5 class="card-title">Card title</h5>
-                                                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <div class="col">
-                                        <div class="card h-100">
-                                            <img src="..." class="card-img-top" alt="Alt-Image" />
-                                            <div class="card-body">
-                                                <h5 class="card-title">Card title</h5>
-                                                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <div class="col">
-                                        <div class="card h-100">
-                                            <img src="..." class="card-img-top" alt="Alt-Image" />
-                                            <div class="card-body">
-                                                <h5 class="card-title">Card title</h5>
-                                                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <div class="col">
-                                        <div class="card h-100">
-                                            <img src="..." class="card-img-top" alt="Alt-Image" />
-                                            <div class="card-body">
-                                                <h5 class="card-title">Card title</h5>
-                                                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                </div>
-                            </div>
-                            <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab" tabindex="0">...</div>
-                            <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab" tabindex="0">...</div>
-                            <div class="tab-pane fade" id="nav-disabled" role="tabpanel" aria-labelledby="nav-disabled-tab" tabindex="0">...</div>
-                        </div>
-                    </div>
-
-                    <!-- Report Sale -->
-                    <div class="row border-top border-2 border-danger">
-                        <h1>Report Sale</h1>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- <div id="app"></div> -->
+        <div id="app"></div>
 
         <!-- Script for Bootstrap 5 -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-        <!-- <script type="module" src="/src/main.js"></script> -->
+        <!-- Script for Vue component  -->
+        <script type="module" src="src/main.js"></script>
     </body>
 </html>
